Fixed link to tree1.xml

--- a/task1/task1.ipynb
+++ b/task1/task1.ipynb
@@ -74,7 +74,7 @@
     "outputId": "a6e0be02-6b2a-4fcc-f44c-6e1341da9697"
    },
    "source": [
-    "!wget https://tree1.xml -O tree.xml"
+    "!wget https://github.com/Zetman13/DataVizualizationMethods/raw/master/task1/tree1.xml -O tree.xml"
    ],
    "execution_count": 3,
    "outputs": [
